<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResetSuccessful">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reset_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/reset_successful"
        android:textColor="@color/green"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reset_text1"
        android:textColor="#474747"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_heading" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_text2"
        android:textColor="#474747"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_line1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_line2"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"/>





</androidx.constraintlayout.widget.ConstraintLayout>