<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterScreen">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/welcome_text"
            android:textColor="@color/ts_color"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="70dp"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/ts_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text" />

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/form_bg"
            android:hint="@string/first_name"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#474747"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/form_bg"
            android:hint="@string/last_name"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#474747"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_first_name" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/form_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#474747"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_last_name" />

        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/form_bg"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#474747"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_email" />


        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_phone_number">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/form_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="#474747" />

            <ImageView
                android:id="@+id/showHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:src="@drawable/ic_show_password" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_layout">

            <EditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/form_bg"
                android:hint="@string/confirm_pass"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="#474747" />

            <ImageView
                android:id="@+id/show_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:src="@drawable/ic_show_password" />

        </RelativeLayout>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/ts_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_layout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/checkbox_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/checkbox_text1"
            android:textColor="#474747"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_layout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/checkbox_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textColor="#474747"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toBottomOf="@id/checkbox_text1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/terms_and_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/terms"
            android:textColor="@color/ts_color"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/checkbox_text2"
            app:layout_constraintTop_toBottomOf="@id/checkbox_text1" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/new_button_bg"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terms_and_conditions" />

        <LinearLayout
            android:id="@+id/icons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_button">

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/icons_bg"
                android:src="@drawable/ic_linkedin_icon" />

            <ImageButton
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/icons_bg"
                android:src="@drawable/google_icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icons_layout">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_acct"
                android:textColor="#474747"
                android:textSize="15sp"
                android:textStyle="normal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/login"
                android:textColor="@color/ts_color"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>